2014-10-03  Ken Brown  <kbrown@cornell.edu>

	Changes to compile for Cygwin:
	* info/Makefile.am (LDADD): Add "$(LIBICONV)".
	* info/info-utils.c: Remove include of nl_types.h.

2014-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_next_xref) 
	(info_move_to_prev_xref): If an argument is given with C-u, go 
	forward or backward that number of references.
	* info/t/tab-argument.sh: New test.

	* info/info.c (info_short_help): Examples in help text changed.

2014-09-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search, do_info_index_search): 
	Getting user input moved from do_info_index_search.

	* info/indices.c (next_index_match, info_next_index_match): 
	Function split out.
	(look_in_indices): Return value as intended.

	* info/indices.c, info/session.c (allfiles_node) 
	(info_all_files): Moved between files.
	* info/session.c (move_to_goal_column): Return type declared as 
	void.
	(info_dispatch_on_key): Return values as intended.

	* info/indices.c (report_index_match): Split out from 
	info_next_index_match.

	* info/indices.c (next_index_match): Don't take index argument; 
	always operate on index_index.  Take FILE_BUFFER argument.  
	Update index_offset.  Call to info_indices_of_file_buffer to 
	update index_index moved from do_info_index_search.  All callers 
	updated.
	* info/info.c (main) <--index-search>: Call next_index_match and 
	report_index_match.

	* info/indices.c (do_info_index_search): Merged into 
	info_index_search.
	(info_entry_exists): Function removed.
	(report_index_match): Don't internationalize a string that 
	should never be displayed.

	* info/indices.c (info_indices_of_file_buffer): Check if we have 
	already built an index moved from next_index_match.
	(info_index_search) <empty search string>: Call 
	info_indices_of_file_buffer.  Always exit function. 

2014-09-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Strip any suffix like 