@@ -4,6 +4,8 @@
 	* info/Makefile.am (LDADD): Add "$(LIBICONV)".
 	* info/info-utils.c: Remove include of nl_types.h.
 
+	* man/Makefile.am: Don't build infokey.1.
+
 2014-09-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/session.c (info_move_to_next_xref) 
